# CyberClaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SOUL.md  TOOLS.md  findings.md  mvp_plan.md  progress.md  task_plan.md
config/: device_heuristics_rules.json  notifications.json  openclaw.json  topology.json  vendor_oui.json  workflows.json
docs/: improvement_plan.html  netalertx-analysis.html  practical_upgrade_plan.html
lab/: event_generator.py
mcp-servers/_template/: models.py  server.py
mcp-servers/attack-timeline/: server.py
mcp-servers/auto-response/: server.py
mcp-servers/config-audit/: server.py
mcp-servers/cve-intel/: server.py
mcp-servers/device-config/: gnmi_mcp_server.py
mcp-servers/nmap-scan/: requirements.txt  server.py
mcp-servers/security-baseline/: server.py
mcp-servers/simulation/: gns3_mcp_server.py
mcp-servers/traffic-analyzer/: server.py
scripts/: install.sh  start.sh
server/: main.py  requirements.txt
server/api/: chat.py  dashboard.py  discovery.py  notification_router.py  scenario.py  security.py  tools.py  topology.py  (+1 more)
simulation/: docker-compose.yml  start_iot_lab.sh
src/cyberclaw_core/: __init__.py  gait_logger.py  mcp_base.py  pyproject.toml  security_models.py
src/cyberclaw_core/cyberclaw_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cyberclaw_core/tests/: test_security_models.py
src/cyberclaw_core/toon/: __init__.py  cost_calculator.py  counter.py  toon_serializer.py  toon_wrapper.py
tests/: conftest.py  test_e2e.py  test_phase1.py  test_phase2.py  test_phase3.py
(+52 files in other folders)
